<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <!-- Viewer strings -->
    <string name="app_name">PRECIOUS</string>
    <string name="reset_counter_prompt">Would you like to reset the step counter?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connected">Connected to Location Services</string>
    <string name="disconnected">Disconnected from Location Services</string>
    <string name="connection_failed">Connection to service failed: error code %1$d</string>
    <string name="log_message">Log: timestamp: %1$s type %2$s confidence %3$d</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="date_format_error">Internal error: date formatting exception.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
	<string name="detecting_activity">Detecting physical activity</string>
    <string name="about">Please visit http://www.thepreciousproject.eu/ for more information</string>
    <string name="button_summary">Show day summary</string>
    <string name="button_log">Show log file</string>
    <string name="button_about">About</string>
    <string name="button_exit">Exit</string>
    <string name="first_start">For better performance, this application needs you to fill some important data. Once you are done, you can close the configuration menu.</string>
	<string name="ok">OK</string>
	<string name="later">Later</string>
    <string name="null_string"></string>
    <string name="select_day">Select a day:</string>
    <string name="hint_choose_day">(Choose a day)</string>
    <string name="show_chart">Show chart for the selected day</string>
    <string name="hint_no_data">No data</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start_at">Start at</string>
    <string name="min_duration">min. Duration</string>
    <string name="undefined_location"> </string>
    <string name="button_configuration">Configuration</string>
    <string name="button_timeline">Timeline</string>
    <string name="error_user_id">Error getting User ID</string>
    <string name="waiting_data">Application is still waiting to collect data</string>
    <string name="no_tobacco">No tobacco</string>
    <string name="foreground_service_started">foreground_service_started</string>
    <string name="day_steps">Day steps</string>
    <string name="total_steps">Total steps</string>
    <string name="reset_temp_steps">Reset temp steps</string>
    <string name="send_data">Send data</string>
    <string name="fodd_intake">Food intake</string>
    <string name="loading_food_ddbb">Food database is loading...</string>
    <string name="recom_image_size">THE RECOMMENDED RESOLUTION IS 640x480</string>
    <string name="game1">Game 1</string>
    <string name="game3">Game 3</string>
    
    <string name="weekly">Weekly:</string>
    <string name="session_steps">Session steps:</string>
    <string name="today_steps">Today steps:</string>
    <string name="no_steps">No steps detected</string>        
    <string name="user_id">User ID:</string>
    <string name="still">Still</string>
    <string name="walk">Walk</string>
    <string name="bicycle">Bicycle</string>
    <string name="vehicle">Vehicle</string>
    <string name="run">Run</string>
    <string name="tilt">Using the smartphone</string>
    <string name="time_walking">Time spended walking</string>
    <string name="time_running">Time spended running</string>
    <string name="time_bicycle">Time spended riding a bicycle</string>
    <string name="time_vehicle">Time spended travelling in a vehicle</string>
    <string name="time_tilt">Time spended using the smartphone</string>
    <string name="time_stand">Time spended without any physical activity</string>
    
    <!--  Preferences strings-->
    <string name="enable_gps">Enable GPS?</string>
    <string name="gps_battery">Uses more battery.</string>
    <string name="enable_vibration">Enable vibrations?</string>
    <string name="vibration_notif">Used by notifications.</string>    
    <string name="personal_data">Personal data</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>   
    <string name="tobacco_consum">Tobacco consumption</string>
    <string name="num_cigarettes">(number of cigarettes)</string> 
    <string name="alc_monthly">1-3h monthly</string>
    <string name="alc_weekly">1-2h weekly</string>    
    <string name="alc_weekly2">3-5h weekly</string>
    <string name="alc_weekly3">5-10h weekly</string>
    <string name="alc_weekly4">>10h weekly</string>
	<string name="alcoholic_config">How much alcohol do you drink?</string>
    <string name="alcoholic_config2">How much alcohol do you drink monthly?</string>
    <string name="beer_info">Lager/beer/cider \n (330ml, ABV 5%)</string>
    <string name="wine_info">Glass of red/\nwhite/rosé wine \n (175ml, ABV 12%)</string>
    <string name="cocktail_info">Glass of cocktail \n (130ml, ABV 10%)</string>
    <string name="strong_alco_info">Shot of spirits \n (25ml, ABV 40%)</string>    
    <string name="phys_activ_config">Physical activity configuration</string>
    <string name="manual_phys_activ">How active are you?</string>
    <string name="manual_phys_activ_summary">Total hours of physical activity (gym, swimming, etc)</string>
    <string name="set_goals">Set your goals</string>
    <string name="walk_hours">Walking goal\n(daily)</string>
    <string name="run_hours">Running goal\n(Weekly)</string>
    <string name="bicycle_hours">Bicycle goal\n(Weekly)</string>    
    
    <string name="good_morning_notif">Good morning!</string>
    <string name="good_morning_notif_content">Touch here to detect your face.</string>

    <!--  Step counter strings-->
    <string name="step_count_notif">Counting steps, check the PRECIOUS app.</string>
    <string name="counting_steps">Counting steps</string>
    <string name="step_count_notif_content">Check the PRECIOUS app by touching here.</string>
   
    
    <!--  Food intake detector strings -->
    <string name="select_photo">Take a photo</string>    
    <string name="store_data">Save</string>  
    <string name="next_image">Next image</string>
    <string name="enter_food">Manual input</string>
    <string name="detect_food">Detect Food</string>
    <string name="food_intake">Food det.</string>
    <string name="picture_not_loaded">Picture was not loaded</string>
    <string name="error_photo">Error taking photo. Please try again or lower the camera resolution.</string>
    <string name="barcode_det">Detect barcode</string>
    <string name="food_type">Selected food:</string>
    <string name="food_amount">Amount:</string>
    <string name="in_grams">(in grams)</string>
    <string name="nutritional_info">Nutritional information (for 100g):</string>
    
    <!--  Game 1 strings -->
    <string name="game1_question1">Considering the same amount for each food type, touch them in order starting from the one that has less fats:</string>
    <string name="your_answer">Your answer:</string>
    <string name="submit">Submit</string>
    <string name="auto_submit">Auto submit</string>
    <string name="next">Next</string>
    <string name="correct_asnwers">Correct answers: </string>
    <string name="score_init">Score: 0/0</string>
    <string name="score">Score:</string>
    <string name="speed">Speed:</string>
    <string name="aceleration">Acceleration:</string>
    
	<!--  Game 3 strings -->
    <string name="try_again">Try again</string>  	
    <string name="exit">Exit</string>
</resources>
