<?xml version="1.0" encoding="utf-8"?>
  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spinnerMain"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:scrollbarAlwaysDrawVerticalTrack="false" />

        <TextView
            android:id="@+id/textViewAdressMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/undefined_location"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
 
   <ImageView
       android:id="@+id/imageView1"
       android:layout_width="wrap_content"
       android:layout_height="200dp"
       android:background="@color/white"
       android:contentDescription="@string/null_string"
       android:gravity="top"
       android:src="@drawable/precious_logo" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="5dp"
       android:layout_marginLeft="5dp"
       android:layout_marginRight="5dp"
       android:orientation="horizontal" >

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical" >

           <TextView
               android:id="@+id/stepCountTempTextView"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:visibility="invisible" />

           <TextView
               android:id="@+id/stepCountDayTextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:hint="Day steps"  />

           <TextView
               android:id="@+id/stepCountTotalTextView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:hint="Total steps"
               android:visibility="invisible" />

       </LinearLayout>

       <Button
           android:id="@+id/button4"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="resetTempSteps"
           android:text="Reset temp steps"
           android:visibility="gone" />

       <Button
           android:id="@+id/button5"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="sendDataToServer"
           android:text="Send data"
           android:visibility="gone" />

       <Button
           android:id="@+id/button6"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="runFoodIntake"
           android:text="Food intake" />
       
		<Button
           android:id="@+id/button8"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="runGame1"
           android:text="Game1" />
	
       <Button
           android:id="@+id/button7"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:onClick="runGame3"
           android:text="Game3" />


   </LinearLayout>
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/walkingButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/walking"
                android:contentDescription="@string/null_string"
                android:maxHeight="50dp"/>

            <ImageButton
                android:id="@+id/runButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/running"
                android:contentDescription="@string/null_string"
                android:maxHeight="50dp" />

            <ImageButton
                android:id="@+id/bikeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/bicycle"
                android:contentDescription="@string/null_string"
                android:maxHeight="50dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewWalk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewBicycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ProgressBar
                android:id="@+id/progressBarWalk"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="70dp"
                android:layout_height="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

            <ProgressBar
                android:id="@+id/progressBarRun"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="70dp"
                android:layout_height="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

            <ProgressBar
                android:id="@+id/progressBarBicycle"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="70dp"
                android:layout_height="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/textViewWalkWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewRunWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewBicycleWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/vehicleButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/vehicle"
                android:contentDescription="@string/null_string"
                android:maxHeight="50dp"
                android:onClick="onCLickVehicle" />           					 

            <ImageButton
                android:id="@+id/phoneButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/phone"
                android:contentDescription="@string/null_string"
                android:maxHeight="50dp"
                android:onClick="onCLickTilting" />

            <ImageButton
                android:id="@+id/sleepButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/still"
                android:contentDescription="@string/null_string"
                android:maxHeight="50dp"
                android:onClick="onCLickStill" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textViewVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

       <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/actionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="drawLog"
            android:text="@string/button_timeline" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/actionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="openConfiguration"
            android:text="@string/button_configuration" />

        <Button
            android:id="@+id/button3"
            style="?android:attr/actionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:onClick="showAbout"
            android:text="@string/button_about"
             />

    </LinearLayout>

</LinearLayout>
